--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -816,41 +816,33 @@ and Pacman.</string>
          <property name="title" >
           <string>ABS Configuration</string>
          </property>
-         <layout class="QGridLayout" >
-          <item row="0" column="0" >
+         <layout class="QGridLayout" name="gridLayout" >
+          <item row="0" column="0" colspan="3" >
            <widget class="QRadioButton" name="useMatchSupRadio" >
             <property name="text" >
              <string>Use supfiles that match your current repositories</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="0" >
-           <layout class="QHBoxLayout" >
-            <item>
-             <widget class="QRadioButton" name="useCustomSupRadio" >
-              <property name="text" >
-               <string>Define supfiles manually</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="supEdit" />
-            </item>
-           </layout>
+          <item row="1" column="0" colspan="2" >
+           <widget class="QRadioButton" name="useCustomSupRadio" >
+            <property name="text" >
+             <string>Define supfiles manually</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2" >
+           <widget class="QLineEdit" name="supEdit" />
           </item>
           <item row="2" column="0" >
-           <layout class="QHBoxLayout" name="horizontalLayout" >
-            <item>
-             <widget class="QLabel" name="label_21" >
-              <property name="text" >
-               <string>RSync Server:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="rsyncServerEdit" />
-            </item>
-           </layout>
+           <widget class="QLabel" name="label_21" >
+            <property name="text" >
+             <string>RSync Server:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1" colspan="2" >
+           <widget class="QLineEdit" name="rsyncServerEdit" />
           </item>
          </layout>
         </widget>
@@ -919,29 +911,25 @@ and Pacman.</string>
          <property name="title" >
           <string>Build Environment</string>
          </property>
-         <layout class="QGridLayout" >
+         <layout class="QGridLayout" name="gridLayout_2" >
           <item row="0" column="0" >
-           <layout class="QHBoxLayout" >
-            <item>
-             <widget class="QLabel" name="label_14" >
-              <property name="text" >
-               <string>Building Path</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="buildPathEdit" />
-            </item>
-           </layout>
+           <widget class="QLabel" name="label_14" >
+            <property name="text" >
+             <string>Building Path</string>
+            </property>
+           </widget>
           </item>
-          <item row="1" column="0" >
+          <item row="0" column="1" >
+           <widget class="QLineEdit" name="buildPathEdit" />
+          </item>
+          <item row="1" column="0" colspan="2" >
            <widget class="QCheckBox" name="cleanMakeDepsBox" >
             <property name="text" >
              <string>Remove installed makedepends after build</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="0" >
+          <item row="2" column="0" colspan="2" >
            <widget class="QCheckBox" name="cleanBuildEnvBox" >
             <property name="text" >
              <string>Clean Build Environment after installation</string>
@@ -958,8 +946,8 @@ and Pacman.</string>
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>679</width>
+        <height>607</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
